Blueprint work trying to get animations to work.

--- a/ClobberParty.uproject
+++ b/ClobberParty.uproject
@@ -26,6 +26,17 @@
 				"Mac",
 				"Linux"
 			]
+		},
+		{
+			"Name": "WinDualShock",
+			"Enabled": true,
+			"SupportedTargetPlatforms": [
+				"Win64"
+			]
+		},
+		{
+			"Name": "RawInput",
+			"Enabled": true
 		}
 	]
 }
